--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,10 @@
     <string name="des_imgUpv">logo Upv</string>
     <string name="des_text">texto main</string>
 
+    <!--PANTALLA MENU MAIN-->
+    <string name="text_Ibilbidea">Ibilbidea</string>
+    <string name="text_Galeria">Galeria</string>
+    <string name="text_Ondareak">Ondareak</string>
+    <string name="text_Home">Home</string>
     <string name="title_activity_maps">Map</string>
 </resources>
