--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="text_Ibilbidea">Ibilbidea</string>
     <string name="text_Galeria">Galeria</string>
     <string name="text_Ondareak">Ondareak</string>
-    <string name="text_Home">Home</string>
+   <!-- <string name="text_Home">Home</string>-->
     <string name="title_activity_maps">Map</string>
 </resources>
