carga de juegos y cambios en BD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,8 @@
     <string name="txtDescripcion">descrip</string>
     <!--Juego 2.1 -->
     <string name="azalpena">Konparatu argazki hauek gaur egungo zubiarekin eta bilatu desberdintasunak. Komentatu zure ikaskideekin</string>
+    <!--Juego 3.1-->
+    <string name="imagenjuego3">imagenJuego3</string>
+    <string name="imagenboton">imagenboton</string>
 
 </resources>
