--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,9 @@
     <string name="title_activity_maps">Map</string>
 
     <!--PANTALLA GALERY-->
-    <string name="text_btnSacarFoto">Sacar foto</string>
+    <string name="SacarFoto">Sacar foto</string>
+    <string name="cont_img">Sacar foto</string>
+
 
     <!--PANTALLA MAPA-->
     <string name="access_token" translatable="false">pk.eyJ1IjoiZGlkYWt0aWthcHAiLCJhIjoiY2pubGdlOXVpMTF3MDN3czVhNTJ4eWV2NCJ9.axDKMhplxotNcdvMT9y6dg</string>
@@ -23,6 +25,9 @@
     <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
     <string name="simple_offline_end_progress_success">End progress success</string>
     <string name="basic_offline_deleted_toast">Deletes toast</string>
+    <string name="centrar">Centrar</string>
+    <string name="sig">Sig</string>
+    <string name="prev">Prev</string>
 
     <!--PARADAS-->
     <string name="TextView">TextView</string>
