Revert "arreglo en galeria, añadir logo y cambios en diseño"
This reverts commit 02984850d8a4c73826557efb4d2a0032d9997630.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GETXOKO HISTORIA</string>
+    <string name="app_name">DidaktikApp</string>
 
     <!-- PANATALLA MAIN-->
     <string name="btnHasi">Hasi</string>
