Mapa: insercion marcadores, punto de prueba, boton de centrar cambiado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
     <!--Juego 3.1-->
     <string name="imagenjuego3">imagenJuego3</string>
     <string name="imagenboton">imagenboton</string>
+    <string name="butAct">Actividades</string>
+    <string name="textodistancia">distancia</string>
+    <string name="textodestino">destino</string>
 
     <!--Juego 2.2 galderen erantzuna-->
     <string name="kolorea">Kolore zerrenda</string>
