juegos desde mapa arreglado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <!--PANTALLA AJUSTES -->
     <string name="Sortzaileak">Sortzaileak</string>
     <string name="Bertsioa_egiaztatu">Bertsioa egiaztatu</string>
+    <string name="Reset">Reset</string>
 
 
     <!--PANTALLA MAPA-->
