Ejercicio 11/12, mas audios, imagen fondoprueba

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="respuesta_4_11">Liburutegia</string>
     <string name="respuesta_5_11">Merkatua</string>
     <string name="respuesta_6_11">Jolas-zentroa</string>
+    <string name="textoorden">1. giza etxea, 2. zinema, 3. sutea, 4. otoitza,  5. musika</string>
 
 
 </resources>
