cambio musica juego 13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,10 @@
     <string name="respuesta_5_11">Merkatua</string>
     <string name="respuesta_6_11">Jolas-zentroa</string>
     <string name="textoorden">1. giza etxea, 2. zinema, 3. sutea, 4. otoitza,  5. musika</string>
+    <string name="testua1">XIX. mendearen amaierararte Nerbioiko estuarioa zegoen, hondartza, dunez, paduraz…. beteta zegoena eta naufragio asko eragin zituen.</string>
+    <string name="testua2">Máximo Aguirre enpresaria heldu zenean, Lamiako eta Areetako zonaldeak lehortu ziren eta urbanizatzen hasi ziren.</string>
+    <string name="testua3">Nerbioi itsasadarraren amaiera bideratu zen are bankua desagertarazteko. Horretarako, 2 kai egin ziren. Portugaleten burdinezko kaia eta Areetan Txurrukako kaia.</string>
+    <string name="testua4">1939an monumentu bat inauguratu zuten  Evaristo de Churrucari dedikatua.</string>
 
 
 </resources>
