--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="respuesta_5_11">Merkatua</string>
     <string name="respuesta_6_11">Jolas-zentroa</string>
     <string name="textoorden">1. giza etxea, 2. zinema, 3. sutea, 4. otoitza,  5. musika</string>
-
+    <string name="textoej15">Getxo XII. mendean eraiki zen, Andra Mariko elizaren inguruan. Arrantzaleek, euren etxeak Algorta auzoko portu txikian eraiki zituzten. Kokaleku bereziari eta hondartzei esker, etxe handiak eraikitzen hasi ziren. Hasiera batean, Areeta bihurtu zen udaleku Bilboko aristokraziaren eta goi-burgesiarentzat. XX. mendearen hasieran Neguri jaio zen, luxuzko bizitokirik famatuena. Neguri izenaren jatorria negu eta hiri hitzak lotuz sortu zen.</string>
 
 
 </resources>
