cambio nombre bd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,10 @@
     <string name="respuesta_6_11">Jolas-zentroa</string>
     <string name="textoorden">1. giza etxea, 2. zinema, 3. sutea, 4. otoitza,  5. musika</string>
     <string name="textoej15">Getxo XII. mendean eraiki zen, Andra Mariko elizaren inguruan. Arrantzaleek, euren etxeak Algorta auzoko portu txikian eraiki zituzten. Kokaleku bereziari eta hondartzei esker, etxe handiak eraikitzen hasi ziren. Hasiera batean, Areeta bihurtu zen udaleku Bilboko aristokraziaren eta goi-burgesiarentzat. XX. mendearen hasieran Neguri jaio zen, luxuzko bizitokirik famatuena. Neguri izenaren jatorria negu eta hiri hitzak lotuz sortu zen.</string>
+    <string name="galdera1">1914 eta 1928an eraikina berritu eta barroko estiloa hartu zuen.</string>
+    <string name="galdera2">Cisco II. eta Cisco III. ez ziren eraikin honetan oinarritu.</string>
+    <string name="galdera3">Luis Arana Urigüen enpresaburu, politikari kontserbadorea eta kirolari bilbotarrak eskatuta eraiki zuten.</string>
+    <string name="galdera4">Luis Aranaren laketontziek (6 metroko belaontziek) Cisco izena zuten, eta hortik dator etxearen izena</string>
 
 
 </resources>
