--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,12 @@
     <string name="galdera2">Cisco II. eta Cisco III. ez ziren eraikin honetan oinarritu.</string>
     <string name="galdera3">Luis Arana Urigüen enpresaburu, politikari kontserbadorea eta kirolari bilbotarrak eskatuta eraiki zuten.</string>
     <string name="galdera4">Luis Aranaren laketontziek (6 metroko belaontziek) Cisco izena zuten, eta hortik dator etxearen izena</string>
+    <string name="actividad7_palabra_1">Nursery</string>
+    <string name="actividad7_palabra_2">Achucarro</string>
+    <string name="actividad7_palabra_3">Sotoa</string>
+    <string name="actividad7_palabra_5">Ingelesa</string>
+    <string name="actividad7_palabra_6">Eklektikoa</string>
+    <string name="actividad7_palabra_7">Smith</string>
 
 
 </resources>
