--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,19 @@
     <string name="actividad7_palabra_5">Ingelesa</string>
     <string name="actividad7_palabra_6">Eklektikoa</string>
     <string name="actividad7_palabra_7">Smith</string>
+    <string name="Sortzaileak">Sortzaileak</string>
+    <string name="Magisteritza">UPV Leioa L.H Magisteritza</string>
+    <string name="Ane_arce">Ane Arce</string>
+    <string name="Sheila_Aldekoa">Sheila Aldekoa</string>
+    <string name="Sara_Aldekoa">Sara Aldekoa</string>
+    <string name="Naroa_Da_Costa" />
+    <string name="Naroa_Da_Costa1">Naroa Da Costa</string>
+    <string name="Nerea_Garcia">Nerea Garcia</string>
+    <string name="Haizea_Gardeazabal">Haziea Gardeazabal</string>
+    <string name="Txurdinaga">FP Txurdinaga Multiplataforma goi maila</string>
+    <string name="Javi">Javi Borja</string>
+    <string name="Lander">Lander Arbizu</string>
+    <string name="Iñaki">Iñaki Elezkano</string>
 
 
 </resources>
