--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="actividad7_palabra_5">Ingelesa</string>
     <string name="actividad7_palabra_6">Eklektikoa</string>
     <string name="actividad7_palabra_7">Smith</string>
-    <string name="Sortzaileak">Sortzaileak</string>
+    <string name="Sortzaileak2">Sortzaileak</string>
     <string name="Magisteritza">UPV Leioa L.H Magisteritza</string>
     <string name="Ane_arce">Ane Arce</string>
     <string name="Sheila_Aldekoa">Sheila Aldekoa</string>
