cambio sortzaile y juego 17

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="Naroa_Da_Costa1">Naroa Da Costa</string>
     <string name="Nerea_Garcia">Nerea Garcia</string>
     <string name="Haizea_Gardeazabal">Haziea Gardeazabal</string>
-    <string name="Txurdinaga">FP Txurdinaga Multiplataforma goi maila</string>
+    <string name="Txurdinaga">FP Txurdinaga Multiplataforma</string>
     <string name="Javi">Javi Borja</string>
     <string name="Lander">Lander Arbizu</string>
     <string name="Iñaki">Iñaki Elezkano</string>
