Reajustes mapa y pequeño arreglo ej. 16 y Comic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <!--Juego 3.1-->
     <string name="imagenjuego3">imagenJuego3</string>
     <string name="imagenboton">imagenboton</string>
-    <string name="butAct">Actividades</string>
+    <string name="butAct">Jarduerak</string>
     <string name="textodistancia">Distantzia</string>
     <string name="textodestino">Helmuga</string>
 
